<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_label">Enter amount</string>
    <string name="ten_label">10%</string>
    <string name="fifteen_label">15%</string>
    <string name="twenty_label">20%</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">Total:</string>
    <string name="default_tip">0.00</string>

</resources>
