<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TodoActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/hint_label"
        android:inputType="phone" >

       <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTen"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="30dp"
        android:text="@string/ten_label" />

    <Button
        android:id="@+id/btnFifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFifteen"
        android:layout_alignBaseline="@+id/btnTen"
        android:layout_alignBottom="@+id/btnTen"
        android:layout_toRightOf="@+id/btnTen"
        android:text="@string/fifteen_label" />

    <Button
        android:id="@+id/btnTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTwenty"
        android:layout_alignBaseline="@+id/btnFifteen"
        android:layout_alignBottom="@+id/btnFifteen"
        android:layout_toRightOf="@+id/btnFifteen"
        android:text="@string/twenty_label" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTen"
        android:layout_below="@+id/btnTen"
        android:layout_marginTop="38dp"
        android:text="@string/tip_label" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/total_label" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/default_tip" />
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/tvTip"
        android:text="@string/default_tip" />

</RelativeLayout>